# Aneurysm-Detection

./: .gitignore  .gitmodules  Data-exploration-tutorial.ipynb  README.md  bounding_box.json  bounding_box_141_affine.json  bounding_box_147.json  bounding_box_147_2.json  bounding_box_final.json  pyproject.toml  requirements.txt  visualization.ipynb
src/: utils.py
src/aneurysm-detection/: bounding_box.py  bounding_boxes.py  clustering.py  dataset.py  eval.ipynb  model.py  nifty_to_h5.py  training_script.py
