[tool.poetry]
name = "Aneurysm-Detection"
version = "0.1.0"
description = ""
authors = ["sudo-Boris <boris.meinardus00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
backcall = "^0.2.0"
decorator = "^5.1.1"
imageio = "^2.19.1"
importlib-metadata = "^4.11.3"
ipykernel = "^6.13.0"
ipympl = "^0.9.1"
ipython = "^8.3.0"
ipython_genutils = "^0.2.0"
ipywidgets = "^7.7.0"
itkwidgets = "^0.32.1"
jedi = "^0.18.1"
jupyter-client = "^7.3.1"
jupyter-core = "^4.10.0"
meshio = "^5.3.4"
matplotlib = "^3.5.2"
nibabel = "^3.2.2"
numpy = "^1.22.3"
packaging = "^21.3"
parso = "^0.8.3"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = "^9.1.0"
prompt-toolkit = "^3.0.29"
ptyprocess = "^0.7.0"
Pygments = "^2.12.0"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pyvista = "^0.34.1"
pyzmq = "^22.3.0"
scooby = "^0.5.12"
six = "^1.16.0"
scikit-build = "^0.14.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
tornado = "^6.1"
tqdm = "^4.64.0"
traitlets = "^5.2.0"
transforms3d = "^0.3.1"
typing-extensions = "^4.2.0"
vtk = "^9.1.0"
wcwidth = "^0.2.5"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
